--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@japa/preset-adonis": "^1.2.0",
     "@japa/runner": "^2.5.1",
     "@types/proxy-addr": "^2.0.0",
+    "@types/sinon": "^10.0.14",
     "@types/source-map-support": "^0.5.6",
     "adonis-preset-ts": "^2.1.0",
     "pino-pretty": "^10.0.0",
+    "sinon": "^15.0.4",
     "typescript": "~4.6",
     "youch": "^3.2.3",
     "youch-terminal": "^2.2.0"
